feat: implement DELETE /like/{articleId}
